# ai-data-engineering-framework

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  article_mapping.md  implementation_design.md  test_results.md  verification_checklist.md
examples/: pipeline_config.yaml  sample_input.csv  sample_pipeline.py
src/adef/: __init__.py  audit_logger.py  exceptions.py  ingestion.py  lineage_tracker.py  metadata_store.py  pipeline_runner.py  quality_engine.py  transformation.py  validation.py
tests/: test_audit_logger.py  test_ingestion.py  test_lineage_tracker.py  test_metadata_store.py  test_pipeline_runner.py  test_quality_engine.py  test_transformation.py  test_validation.py
